unpackaged/main/default/objects/Supplier_Accounts__c/Supplier_Accounts__c.object-meta.xml
<CustomObject>
    <label>Supplier Accounts</label>
    <nameField>
        <label>Supplier Accounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>