unpackaged/main/default/objects/Supplier_Accounts__c/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <label>Activity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>Onboarding Content</fullName>
                <isActive>false</isActive>
                <label>Onboarding Content</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <isActive>false</isActive>
                <label>Onboarding Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>