unpackaged/main/default/objects/Supplier_Accounts__c/fields/Account_Stage_Path__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage_Path__c</fullName>
    <label>Account Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Onboard</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Parked</fullName>
            </value>
            <value>
                <fullName>Onboarding Terms</fullName>
            </value>
            <value>
                <fullName>Onboarding Content New Supplier</fullName>
            </value>
            <value>
                <fullName>Onboarding Content Legacy Supplier</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>