unpackaged/main/default/objects/Supplier_Accounts__c/fields/Activated_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Activated_LIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only to be ticked at the final stage of getting an account LIVE!</description>
    <inlineHelpText>Please only set this to &quot;true&quot; if you know what you are doing! If unsure, contact your administrator !</inlineHelpText>
    <label>Activated LIVE!</label>
    <type>Checkbox</type>
</CustomField>