unpackaged/main/default/objects/Supplier_Accounts__c/fields/Average_Rate_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Average_Rate_This_Year__c</fullName>
    <formula>Total_Revenue_This_Year_New__c  /  Nights_Booked_This_Year_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Rate This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>