unpackaged/main/default/objects/Supplier_Accounts__c/fields/Bookings_Last_Month_New__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Last_Month_New__c</fullName>
    <label>Bookings Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>