unpackaged/main/default/objects/Supplier_Accounts__c/fields/Bookings_This_Quarter_Last_Year_New__c.field-meta.xml
<CustomField>
    <fullName>Bookings_This_Quarter_Last_Year_New__c</fullName>
    <label>Bookings This Quarter Last Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>