unpackaged/main/default/objects/Supplier_Accounts__c/fields/Bookings_This_Quarter_NEW__c.field-meta.xml
<CustomField>
    <fullName>Bookings_This_Quarter_NEW__c</fullName>
    <label>Bookings This Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>