unpackaged/main/default/objects/Supplier_Accounts__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <label>Channel Manager</label>
    <type>TextArea</type>
</CustomField>