unpackaged/main/default/objects/Supplier_Accounts__c/fields/Commerciality_score__c.field-meta.xml
<CustomField>
    <fullName>Commerciality_score__c</fullName>
    <label>Commerciality score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Unfavourable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>