unpackaged/main/default/objects/Supplier_Accounts__c/fields/Commission_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Commission_This_Year__c</fullName>
    <formula>((Total_Revenue_This_Year_New__c - Total_Commission_This_Year__c) /  Total_Commission_This_Year__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission % This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>