unpackaged/main/default/objects/Supplier_Accounts__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Id</field>
            <operation>equals</operation>
            <value>0128e000000XkyLAAS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Supplier Accounts</relationshipLabel>
    <relationshipName>Supplier_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>