unpackaged/main/default/objects/Supplier_Accounts__c/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bookable</fullName>
            </value>
            <value>
                <fullName>Requires Review</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>