unpackaged/main/default/objects/Supplier_Accounts__c/fields/Conversion_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Last_Month__c</fullName>
    <formula>Bookings_Last_Month_New__c  /   Enquiries_Last_Month_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion Last Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>