unpackaged/main/default/objects/Supplier_Accounts__c/fields/Conversion_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Conversion_This_Quarter__c</fullName>
    <formula>Bookings_This_Quarter_NEW__c / Enquiries_This_Quarter__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conversion This Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>