unpackaged/main/default/objects/Supplier_Accounts__c/fields/Date_Supplier_Record_Was_Created_APP__c.field-meta.xml
<CustomField>
    <fullName>Date_Supplier_Record_Was_Created_APP__c</fullName>
    <description>Pulls create date from the SITU App. Used for 2 year trading history field.</description>
    <label>Date Supplier Record Was Created (APP)</label>
    <type>Date</type>
</CustomField>