unpackaged/main/default/objects/Supplier_Accounts__c/fields/Days_Since_Last_SP_Log_in__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_SP_Log_in__c</fullName>
    <formula>TODAY() -  SP_Recent_Log_in_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last SP Log-in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>