unpackaged/main/default/objects/Supplier_Accounts__c/fields/Enquiries_Last_Year_New__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_Last_Year_New__c</fullName>
    <label>Enquiries Last Year New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>