unpackaged/main/default/objects/Supplier_Accounts__c/fields/Enquiries_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_This_Quarter__c</fullName>
    <formula>Enquiries_Last_Month_New__c   +  Enquiries_This_Month_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries This Quarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>