unpackaged/main/default/objects/Supplier_Accounts__c/fields/Has_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Has_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfactory Credit Check</label>
    <type>Checkbox</type>
</CustomField>