unpackaged/main/default/objects/Supplier_Accounts__c/fields/Has_Live_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Has_Live_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Live Pricing?</label>
    <type>Checkbox</type>
</CustomField>