unpackaged/main/default/objects/Supplier_Accounts__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INACTIVE</label>
    <type>Checkbox</type>
</CustomField>