unpackaged/main/default/objects/Supplier_Accounts__c/fields/Indemnity_Letter_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Letter_Expiry_Date__c</fullName>
    <label>Indemnity Letter Expiry Date</label>
    <type>Date</type>
</CustomField>