unpackaged/main/default/objects/Supplier_Accounts__c/fields/Integration_Account__c.field-meta.xml
<CustomField>
    <fullName>Integration_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select what the preferred integration system is.</inlineHelpText>
    <label>Integration Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Accounts</relationshipLabel>
    <relationshipName>Supplier_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>