unpackaged/main/default/objects/Supplier_Accounts__c/fields/Is_Standard_Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard_Cancellation_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard Cancellation Policy</label>
    <type>Checkbox</type>
</CustomField>