unpackaged/main/default/objects/Supplier_Accounts__c/fields/ISO_Accredited__c.field-meta.xml
<CustomField>
    <fullName>ISO_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISO Accredited</label>
    <type>Checkbox</type>
</CustomField>