unpackaged/main/default/objects/Supplier_Accounts__c/fields/Last_Account_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Account_Review_Date__c</fullName>
    <label>Last Account Review Date</label>
    <type>Date</type>
</CustomField>