unpackaged/main/default/objects/Supplier_Accounts__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Supplier Accounts</relationshipLabel>
    <relationshipName>Supplier_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>