unpackaged/main/default/objects/Supplier_Accounts__c/fields/Live_Availability_Process__c.field-meta.xml
<CustomField>
    <fullName>Live_Availability_Process__c</fullName>
    <label>Live Availability Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Uncontacted Supplier</fullName>
                <default>true</default>
                <label>Uncontacted Supplier</label>
            </value>
            <value>
                <fullName>No Matching Channel Manager</fullName>
            </value>
            <value>
                <fullName>LIVE_In_Progress</fullName>
                <label>LIVE In Progress</label>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Closed Parked</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>