unpackaged/main/default/objects/Supplier_Accounts__c/fields/Nights_Booked_This_Year_New__c.field-meta.xml
<CustomField>
    <fullName>Nights_Booked_This_Year_New__c</fullName>
    <label>Nights Booked This Year New</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>