unpackaged/main/default/objects/Supplier_Accounts__c/fields/Number_of_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Buildings__c</fullName>
    <label>Number of Buildings</label>
    <summaryFilterItems>
        <field>Supplier_Buildings__c.Is_Deleted__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Supplier_Buildings__c.Supplier_Accounts__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>