unpackaged/main/default/objects/Supplier_Accounts__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SupplierPaymentNotSet</fullName>
                <default>true</default>
                <label>No Supplier Payment Terms Set</label>
            </value>
            <value>
                <fullName>SupplierPaymentDueOnReceipt</fullName>
                <label>Due upon receipt</label>
            </value>
            <value>
                <fullName>SupplierPaymentDueWithin7Days</fullName>
                <label>Payment Due within 7 Days</label>
            </value>
            <value>
                <fullName>SupplierPaymentDueWithin14Days</fullName>
                <label>Payment Due within 14 Days</label>
            </value>
            <value>
                <fullName>SupplierPaymentDueWithin30Days</fullName>
                <label>Payment Due within 30 Days</label>
            </value>
            <value>
                <fullName>SupplierPaymentDueWithin45Days</fullName>
                <label>Payment Due within 45 Days</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>