unpackaged/main/default/objects/Supplier_Accounts__c/fields/PMS__c.field-meta.xml
<CustomField>
    <fullName>PMS__c</fullName>
    <label>PMS</label>
    <type>TextArea</type>
</CustomField>