unpackaged/main/default/objects/Supplier_Accounts__c/fields/Public_Liability__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Public Liability</label>
    <type>Checkbox</type>
</CustomField>