unpackaged/main/default/objects/Supplier_Accounts__c/fields/Public_Liability_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Public_Liability_Expiry_Date__c</fullName>
    <label>Public Liability Expiry Date</label>
    <type>DateTime</type>
</CustomField>