unpackaged/main/default/objects/Supplier_Accounts__c/fields/SITU_Data_Privacy_Policy_Signed__c.field-meta.xml
<CustomField>
    <fullName>SITU_Data_Privacy_Policy_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SITU Data Privacy Policy Signed</label>
    <type>Checkbox</type>
</CustomField>