unpackaged/main/default/objects/Supplier_Accounts__c/fields/SITU_Terms_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>SITU_Terms_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SITU Terms Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>