unpackaged/main/default/objects/Supplier_Accounts__c/fields/SP_Recent_Log_in_Date__c.field-meta.xml
<CustomField>
    <fullName>SP_Recent_Log_in_Date__c</fullName>
    <label>SP Recent Log-in Date</label>
    <type>Date</type>
</CustomField>