unpackaged/main/default/objects/Supplier_Accounts__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>Not Set</label>
            </value>
            <value>
                <fullName>Database Partner</fullName>
            </value>
            <value>
                <fullName>Listing Partner</fullName>
                <label>Listed Partner</label>
            </value>
            <value>
                <fullName>SITU Assured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>