unpackaged/main/default/objects/Supplier_Accounts__c/fields/Total_Commission_This_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_This_Month__c</fullName>
    <label>Total Commission This Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>