unpackaged/main/default/objects/Supplier_Accounts__c/fields/Total_Revenue_This_Quarter_NEW__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_This_Quarter_NEW__c</fullName>
    <label>Total Revenue This Quarter NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>