unpackaged/main/default/objects/Supplier_Accounts__c/fields/Total_Revenue_to_Supplier_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_to_Supplier_New__c</fullName>
    <label>Total Revenue to Supplier New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>