unpackaged/main/default/objects/Supplier_Accounts__c/fields/Two_Year_Trading_History__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Trading_History__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Two Year Trading History</label>
    <type>Checkbox</type>
</CustomField>