unpackaged/main/default/objects/Supplier_Accounts__c/validationRules/SupplierID_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SupplierID_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(SupplierID__c)</errorConditionFormula>
    <errorMessage>SupplierID is required for every record. Please ensure it matches EXACTLY with the ID displayed in Core. This is the 6-digit number found in the URL of the supplier page in Core.</errorMessage>
</ValidationRule>