unpackaged/main/default/objects/Supplier_Accounts__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Address__c</columns>
    <columns>Conversion_Last_Month__c</columns>
    <columns>Last_Account_Review_Date__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>